<resources>
    <string name="app_name">Katify</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="katify_logo">Katify Logo</string>
    <string name="login_page_text">Hey welcome, login to start your kanban!</string>
    <string name="account_name_default">Account name</string>
    <string name="email_default">email@gmail.com</string>
    <string name="add_kanban_button">Add Kanban button</string>
    <string name="profile_icon">Profile icon</string>
    <string name="kanban_name_default">New Kanban</string>
    <string name="add_kanban_button_description">Add Kanban button</string>
    <string name="back_arrow_description">Back to previous page</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="new_note_default">New note</string>
    <string name="sign_in_google_btn">Sign in with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_search">Kanbans successfully retrieved</string>
    <string name="not_found_search">Couldn\'t find any kanban from this user</string>
    <string name="fail_search">Couldn\'t retrieve the data</string>
    <string name="success_create">Kanban successfully created</string>
    <string name="fail_create">Couldn\'t create your kanban :(</string>
</resources>