<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginActivity"
    android:background="@color/pink_gray_900">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@string/katify_logo"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"

        />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_text"
        android:textColor="@color/gray_200"
        android:fontFamily="@font/inter_light"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/pink_100"
        android:drawableLeft="@drawable/ic_google_logo"
        android:text="@string/sign_in_google_btn"
        android:textAllCaps="false"
        android:textColor="@color/pink_gray_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        />



</androidx.constraintlayout.widget.ConstraintLayout>