<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.KanbansPageActivity"
    android:background="@color/pink_gray_900"
    >

<!--  Profile Icon  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/icon_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="@color/pink_300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_group_profile"
        app:layout_constraintHorizontal_chainStyle="packed"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cat_profile"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_icon"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

<!--  Profile info (email & name)  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_group_profile"
        android:paddingStart="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line_profile"
        app:layout_constraintStart_toEndOf="@id/icon_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="textStart"
        >

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_light"
            android:text="@string/account_name_default"
            android:textAlignment="textStart"
            android:textColor="@color/white_800"
            app:layout_constraintBottom_toTopOf="@id/email_profile"
            app:layout_constraintEnd_toEndOf="@id/text_group_profile"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/text_group_profile"
            app:layout_constraintTop_toTopOf="@id/text_group_profile" />
    <TextView
        android:textAlignment="textStart"
        android:id="@+id/email_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:text="@string/email_default"
        android:textColor="@color/white_800"
        app:layout_constraintTop_toBottomOf="@id/name_profile"
        app:layout_constraintBottom_toBottomOf="@id/text_group_profile"
        app:layout_constraintStart_toStartOf="@id/text_group_profile"
        app:layout_constraintEnd_toEndOf="@id/text_group_profile"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--  Add kanban button  -->
    <ImageButton
        android:layout_width="62dp"
        android:layout_height="48.71dp"
        android:src="@drawable/ic_cat_plus_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="1"
        android:contentDescription="@string/add_kanban_button"
        android:backgroundTint="@android:color/transparent"
        />

<!--  Separation line  -->
    <LinearLayout
        android:id="@+id/line_profile"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:background="@color/pink_gray_700"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        >
        <include layout="@layout/kanban_content_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>